manifests/hub-core-services/platform-redis/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: platform-redis
  namespace: hub-platform-data
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: platform-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: platform-redis
  namespace: hub-platform-data
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  serviceName: platform-redis
  replicas: 1
  selector:
    matchLabels:
      app: platform-redis
  template:
    metadata:
      labels:
        app: platform-redis
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
      - name: redis
        image: docker.io/bitnami/redis:7.4.2-debian-12-r4
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: data
          mountPath: /bitnami/redis/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: hcloud-volumes
      resources:
        requests:
          storage: 5Gi
